# fpy

./: .gitignore  .readthedocs.yaml  AGENTS.md  CLAUDE.md  HISTORY.md  Makefile  README.md  analysis.py  pyproject.toml  rival_manager.py
.github/workflows/: docs.yml  sweep.yml  unit.yml
benchmarks/: eft.py  fpbench.py  salsa.py  sampling.py  tensor.py  tests.py  unit.py
docs/: README.md  TODO.md  USAGE.md
docs/notes/: TODO.md
docs/source/: ast.rst  backend.rst  conf.py  developers.rst  example.rst  faq.rst  fpy2.backend.rst  fpy2.frontend.rst  fpy2.ir.rst  fpy2.number.rst  fpy2.passes.rst  fpy2.rst  fpy2.runtime.native.rst  fpy2.runtime.profile.rst  fpy2.runtime.real.rst  fpy2.runtime.rst  fpy2.runtime.sampling.rst  fpy2.runtime.titanic.rst  fpy2.typing.rst  fpy2.utils.rst  index.rst  install.rst  lang.rst  modules.rst  numbers.rst  ops.rst  rewrite.rst  strategies.rst  types.rst
docs/source/dev/: ast.rst  derived-semantics.rst  index.rst  semantics.rst  typing.rst
docs/source/libraries/: core.rst  eft.rst  index.rst  matrix.rst  metrics.rst  vector.rst
docs/todos/: array-size-integer-exactness.md  array-size-symbolic.md  backend-cpp.md  format-infer-abstract-join.md  module.md  multiple-returns.md  remove-listset.md  round-elim.md  semantics.md
examples/: mpfx.py  website.py
examples/fpbench/: benchmarks.py  tensor.py  tests.py  unit.py
examples/graphics/: lod.py  pbrt_sampling.py
exploration/fused_dp/: model.py  sweep.py  sweep_utils.py
exploration/stochastic_bias/: sweep.py
fpy-cpp/: .gitignore  CMakeLists.txt
fpy-cpp/examples/: CMakeLists.txt  benchmark_add.cpp  benchmark_div.cpp  benchmark_fma.cpp  benchmark_mul.cpp  benchmark_mul_engines.cpp  benchmark_sqrt.cpp  mixed_dot_prod.cpp
fpy-cpp/include/: fpy.hpp
fpy-cpp/include/fpy/: arch.hpp  context.hpp  context_ieee754.hpp  context_mp.hpp  context_mpb.hpp  context_mps.hpp  convert.hpp  engine.hpp  ops.hpp  params.hpp  real.hpp  round.hpp  round_opt.hpp  (+1 more)
fpy-cpp/src/: context_ieee754.cpp  context_mpb.cpp  convert.cpp  engine.cpp  ops.cpp  real.cpp  round.cpp  round_opt.cpp
fpy-cpp/tests/: CMakeLists.txt  test_context.cpp  test_context_mp.cpp  test_ops.cpp  test_real.cpp  test_round.cpp  test_round_opt.cpp
fpy2/: README.md  __init__.py  context_types.py  decorator.py  env.py  fpc_context.py  function.py  math.py  metrics.py  module.py  ops.py  primitive.py  runner.py  types.py
fpy2/analysis/: __init__.py  array_size.py  call_graph.py  context_infer.py  context_types.py  context_use.py  ctx_def_use.py  ctx_use.py  define_use.py  defs.py  format_infer.py  live_vars.py  partial_eval.py  purity.py  reachability.py  reaching_defs.py  syntax_check.py  type_check.py  type_infer.py  types.py  verify.py
fpy2/ast/: __init__.py  context_inline.py  define_use.py  formatter.py  fpyast.py  live_vars.py  syntax_check.py  types.py  visitor.py
fpy2/backend/: __init__.py  backend.py  cpp.py  cpp_utils.py  fpc.py  fpy.py
fpy2/cpp/: .gitignore  CMakeLists.txt  README.md
fpy2/cpp/examples/: CMakeLists.txt  benchmark_add.cpp  benchmark_div.cpp  benchmark_fma.cpp  benchmark_mul.cpp  benchmark_sqrt.cpp
fpy2/cpp/include/: fpy.hpp
fpy2/cpp/include/fpy/: arch.hpp  engine.hpp  ops.hpp  params.hpp  real.hpp  round.hpp  rounding.hpp  types.hpp  utils.hpp
fpy2/cpp/src/: engine.cpp  ops.cpp  real.cpp  round.cpp  rounding.cpp
fpy2/cpp/tests/: CMakeLists.txt  test_real.cpp
fpy2/frontend/: __init__.py  codegen.py  decorator.py  definition.py  formatter.py  fpc.py  fpc_context.py  fpyast.py  live_vars.py  parser.py  syntax_check.py  visitor.py
fpy2/interpret/: __init__.py  byte.py  default.py  interpreter.py  native.py  real.py  titanic.py
fpy2/ir/: __init__.py  codegen.py  formatter.py  ir.py  visitor.py
fpy2/libraries/: __init__.py  base.py  core.py  eft.py  matrix.py  metrics.py  vector.py
fpy2/lut/: __init__.py  __main__.py  cli.py  lut.py  spec.py
fpy2/number/: __init__.py  context.py  efloat.py  exponential.py  ext.py  ext_float.py  fixed.py  float.py  format.py  globals.py  gmp.py  gmputils.py  ieee754.py  mp.py  mp_fixed.py  mp_float.py  mpb.py  mpb_fixed.py  mpb_float.py  mpf.py  mps.py  mps_float.py  native.py  number.py  proj.py  real.py  round.py  sm_fixed.py  utils.py
fpy2/passes/: __init__.py  simplify_if.py  ssa.py  verify.py
fpy2/profile/: expr_profiler.py  function_profiler.py
fpy2/rewrite/: __init__.py  applier.py  matcher.py  pattern.py  rewrite.py  subst.py
fpy2/runtime/: __init__.py  env.py  error_profile.py  function.py  sampling.py
fpy2/sample/: sample.py  table.py
fpy2/strategies/: __init__.py  loop_unroll.py  simple.py
fpy2/transform/: __init__.py  const_fold.py  const_prop.py  context_inline.py  copy_prop.py  copy_propagate.py  dead_code.py  for_bundling.py  for_unpack.py  for_unroll.py  free_var_elim.py  func_inline.py  func_update.py  if_bundling.py  lift_context.py  monomorphize.py  monomorphize_type.py  rename_target.py  resolve_prims.py  round_elim.py  simplify_if.py  specialize.py  split_loop.py  ssa.py  subst_var.py  unssa.py  while_bundling.py  while_unroll.py  zip_elim.py
fpy2/typing/: __init__.pyi
fpy2/utils/: __init__.py  bits.py  compare.py  decorator.py  default.py  defaults.py  float_params.py  fractions.py  gensym.py  identifier.py  inspect.py  iterator.py  loader.py  location.py  ordering.py  unionfind.py
infra/fpbench/: __init__.py  __main__.py  fetch.py
infra/mpfx/: mx_dot_prod.py
infra/real/: README.md  __main__.py  common.py  config.py  evaluator.py  expr_profiler.py  func_profiler.py  load.py  sample.py
scripts/: eval.py  examples.py  options.py  time.py
scripts/mpfx/: eval.py  examples.py  options.py  plot.py  time.py  utils.py
tests/fpbench/: fetch.py
tests/infra/: __main__.py  eval.py  format.py
tests/math/: test_mpfr.py  test_ops.py
tests/numbers/: __init__.py  test_round.py
tests/rewrite/: test_applier.py  test_matcher.py  test_pattern.py  test_rewrite.py
tests/unit/: __main__.py  defs.py  eval.py  eval_real.py  fpc.py  fpy.py  generators.py  test_format_infer.py  test_module.py  test_op_names.py  test_ops.py
(+282 files in other folders)
