[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fpy2"
version = "0.1.11"
authors = [ 
  { name="Brett Saiki", email="bsaiki@cs.washington.edu" }
]
description = "An embedded DSL for numerical computing"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "titanfp==0.1.1",
  "gmpy2==2.2",
  "matplotlib"
]

# ``dev`` deps are listed twice on purpose: ``[project.optional-dependencies]``
# keeps ``pip install -e .[dev]`` working, while ``[dependency-groups]`` is
# the PEP 735 surface uv reads when running plain ``uv sync``.  Keep the two
# lists in sync when adding or removing dev deps.
[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-xdist",
  "hypothesis==6.135",
  "mypy",
  "ruff",
  "build",
  "twine",
  "sphinx",
  "sphinx-rtd-theme",
  "sphinx-pyproject"
]

[dependency-groups]
dev = [
  "pytest",
  "pytest-xdist",
  "hypothesis==6.135",
  "mypy",
  "ruff",
  "build",
  "twine",
  "sphinx",
  "sphinx-rtd-theme",
  "sphinx-pyproject"
]

[project.urls]
Homepage = "https://github.com/bksaiki/fpy"
Issues = "https://github.com/bksaiki/fpy/issues"
Documentation = "https://fpy.readthedocs.io/"

[tool.setuptools.packages.find]
include = ["fpy2*"]

[tool.pytest.ini_options]
# Many test classes follow the `<Feature>TestCase` convention rather than the
# default `Test*` prefix; collect both so those suites actually run.
python_classes = ["Test*", "*TestCase"]

[tool.mypy]
disable_error_code = ["import-untyped"]
check_untyped_defs = true

[tool.ruff.lint]
extend-select = ["B"]
# TRY004 (prefer TypeError over ValueError for type checks) conflicts with the
# codebase's consistent use of ValueError for input-type validation.
# SIM102 (collapse nested `if`s) fights readable multi-level guards, several of
# which are not even collapsible here (the outer `if` carries an `elif`).
ignore = ["F401", "F403", "F405", "B905", "TRY004", "SIM102"]

[tool.sphinx-pyproject]
project = "fpy2"
author = "Brett Saiki"
extensions = ['sphinx.ext.autodoc', 'sphinx.ext.coverage', 'sphinx.ext.napoleon', 'sphinx.ext.mathjax']
templates_path = ['_templates']
exclude_patterns = []
html_theme = 'sphinx_rtd_theme'
# html_static_path = ['_static']
